--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation("io.coil-kt:coil-compose:2.2.2")
+
+    implementation 'com.github.a914-gowtham:compose-ratingbar:1.2.4'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
 }
